--- a/MHClient/mini-hearthstone/src/index.html
+++ b/MHClient/mini-hearthstone/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <base href="/">
   <meta charset="utf-8">
   <title>MiniHearthStone</title>
   <base href="/">
